feat: Ajout d'une table avec drag&drop sur les colonnes

--- a/src/theme/scss/_variables.scss
+++ b/src/theme/scss/_variables.scss
@@ -1,9 +1,8 @@
-$primary: #C8007B;
-$secondary: #0055A4;
+$primary: #0055a4;
 
-$white: #FFFFFF;
-$blue: #009DCC;
-$light-grey: #F3F3F3;
+$white: #ffffff;
+$blue: #009dcc;
+$light-grey: #f3f3f3;
 $dark-grey: #454545;
 
-$primary-hover-color: #D84DA2;
+$primary-hover-color: #d84da2;
