--- a/src/theme/scss/styles.scss
+++ b/src/theme/scss/styles.scss
@@ -1,3 +1,5 @@
 @import 'variables.scss';
+@import '../../../node_modules/bootstrap/scss/bootstrap';
 @import 'global.scss';
-@import 'icons.scss';
+@import 'navbar.scss';
+@import '_icons.scss';
