--- a/src/theme/scss/styles.scss
+++ b/src/theme/scss/styles.scss
@@ -12,6 +12,7 @@ $theme-colors: map-merge(
   $theme-colors,
   (
     'accent': $accent,
+    'gray': $gray,
   )
 );
 
@@ -30,6 +31,8 @@ $theme-colors: map-merge(
 @import '~bootstrap/scss/input-group';
 @import '~bootstrap/scss/custom-forms';
 @import '~bootstrap/scss/pagination';
+@import '~bootstrap/scss/alert';
+@import '~bootstrap/scss/close';
 
 @import 'global.scss';
 @import 'navbar.scss';
