--- a/src/theme/scss/_variables.scss
+++ b/src/theme/scss/_variables.scss
@@ -6,7 +6,10 @@ $success: #05d0a6;
 $white: #ffffff;
 $blue: #009dcc;
 $light-grey: #f3f3f3;
+$medium-grey: #dddddd;
+$medium-grey-2: #7d7d7d;
 $dark-grey: #454545;
+$orange: #ea5b0f;
 $gray: #6c757d;
 
 $primary-hover-color: #d84da2;
