--- a/src/theme/scss/styles.scss
+++ b/src/theme/scss/styles.scss
@@ -31,6 +31,8 @@ $theme-colors: map-merge(
 @import '~bootstrap/scss/input-group';
 @import '~bootstrap/scss/custom-forms';
 @import '~bootstrap/scss/pagination';
+@import '~bootstrap/scss/navbar';
+@import '~bootstrap/scss/input-group';
 @import '~bootstrap/scss/alert';
 @import '~bootstrap/scss/close';
 
