--- a/src/theme/scss/_variables.scss
+++ b/src/theme/scss/_variables.scss
@@ -6,10 +6,11 @@ $success: #05d0a6;
 $white: #ffffff;
 $blue: #009dcc;
 $light-grey: #f3f3f3;
-$medium-grey: #dddddd;
-$dark-grey: #454545;
 $orange: #ea5b0f;
 $gray: #6c757d;
+$medium-grey: #dddddd;
+$dark-grey: #454545;
+$gray-680: #7d7d7d; // (https://getbootstrap.com/docs/4.0/getting-started/theming/#grays)
 
 $primary-hover-color: #d84da2;
 
