Feat: Draggable home + SlidePanel

--- a/src/theme/scss/_variables.scss
+++ b/src/theme/scss/_variables.scss
@@ -8,6 +8,7 @@ $blue: #009dcc;
 $light-grey: #f3f3f3;
 $orange: #ea5b0f;
 $gray: #6c757d;
+$bouygues-cyan: #6cc3de;
 $medium-grey: #dddddd;
 $dark-grey: #454545;
 $gray-680: #7d7d7d; // (https://getbootstrap.com/docs/4.0/getting-started/theming/#grays)
