--- a/src/theme/scss/_global.scss
+++ b/src/theme/scss/_global.scss
@@ -1,9 +1,10 @@
 body {
-    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    background-color: #f3f3f3;
-    color: #454545;	
+  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue',
+    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  background-color: #f3f3f3;
+  color: #454545;
 }
 
 .main {
-    background-color: $light-grey;
+  background-color: $light-gray;
 }
