--- a/src/theme/scss/styles.scss
+++ b/src/theme/scss/styles.scss
@@ -35,6 +35,7 @@ $theme-colors: map-merge(
 @import '~bootstrap/scss/list-group';
 @import '~bootstrap/scss/alert';
 @import '~bootstrap/scss/close';
+@import '~bootstrap/scss/dropdown';
 
 @import 'global.scss';
 @import 'navbar.scss';
