Feat/136/parter filter

--- a/src/theme/scss/styles.scss
+++ b/src/theme/scss/styles.scss
@@ -45,3 +45,11 @@ $theme-colors: map-merge(
 .no-select {
   user-select: none;
 }
+
+.btn-link-unstyled {
+  &:hover,
+  &:active {
+    text-decoration: none !important;
+    color: white !important;
+  }
+}
