Feat/174/create step params

--- a/src/theme/scss/styles.scss
+++ b/src/theme/scss/styles.scss
@@ -53,3 +53,13 @@ $theme-colors: map-merge(
     color: white !important;
   }
 }
+
+.btn-outline-simple {
+  color: $dark-gray;
+  background-color: $white;
+  border: 1px solid $medium-gray;
+  &:disabled {
+    background: $medium-gray;
+    color: white;
+  }
+}
