--- a/src/theme/scss/styles.scss
+++ b/src/theme/scss/styles.scss
@@ -63,3 +63,43 @@ $theme-colors: map-merge(
     color: white;
   }
 }
+
+.panel-title {
+  background-color: transparent;
+  color: $dark-gray;
+  font-weight: 300;
+  font-size: 2rem;
+  margin: 3rem 0 1.875rem;
+  padding: 0;
+  text-align: center;
+}
+
+
+.panel-vertical-container {
+  display: flex;
+  flex-direction: column;
+  div.main-content {
+    flex: 1;
+    min-height: 75vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+
+@media screen and (max-height: 768px) {
+  .panel-vertical-container {
+    div.main-content {
+      max-height: 23vh;
+      min-height: 70vh;
+    }
+  }
+}
+@media screen and (min-height: 769px) {
+  .panel-vertical-container {
+    div.main-content {
+      min-height: 75;
+    }
+  }
+}
