--- a/src/theme/scss/styles.scss
+++ b/src/theme/scss/styles.scss
@@ -87,14 +87,23 @@ $theme-colors: map-merge(
   }
 }
 
-@media screen and (max-height: 900px) {
+@media screen and (max-height: 768px) {
   .panel-vertical-container {
     div.main-content {
       max-height: 87vh;
-      min-height: 67vh;
+      min-height: 70vh;
     }
   }
 }
+@media screen and (min-height: 769px) {
+  .panel-vertical-container {
+    div.main-content {
+      min-height: 75vh;
+      max-height: 87vh;
+    }
+  }
+}
+
 
 .error-text {
   color: $orange;
