Feat/300/export lines

--- a/ui/src/theme/scss/styles.scss
+++ b/ui/src/theme/scss/styles.scss
@@ -115,3 +115,15 @@ $theme-colors: map-merge(
   color: $orange;
   font-size: 0.8rem;
 }
+
+.export-link {
+  color: $accent;
+  float: right;
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+.export-logo {
+  width: 100%;
+}
