--- a/ui/src/theme/scss/styles.scss
+++ b/ui/src/theme/scss/styles.scss
@@ -124,6 +124,9 @@ $theme-colors: map-merge(
   }
 }
 
-.export-logo {
-  width: 100%;
+.export-button {
+  width: 40%;
+  img {
+    width: 100%;
+  }
 }
