feat: Ecran : tester le réseau et la localisation

--- a/ui/src/theme/scss/styles.scss
+++ b/ui/src/theme/scss/styles.scss
@@ -170,3 +170,7 @@ $theme-colors: map-merge(
   text-decoration-style: double;
   text-decoration-color: #ef4b4b;
 }
+
+.bottom-space {
+  margin-bottom: 10rem;
+}
