style: utiliser un skeleton comme indicateur de chargement

--- a/ui/src/theme/scss/styles.scss
+++ b/ui/src/theme/scss/styles.scss
@@ -44,6 +44,7 @@ $theme-colors: map-merge(
 @import 'navbar.scss';
 @import 'icons.scss';
 @import 'tooltip.scss';
+@import 'skeleton.scss';
 
 // utility
 .no-select {
