--- a/ui/src/theme/scss/_tooltip.scss
+++ b/ui/src/theme/scss/_tooltip.scss
@@ -1,3 +1,20 @@
+.error-tooltip {
+  .tooltip-inner {
+    background: $orange !important;
+  }
+  .tooltip-arrow {
+    border-color: $orange !important;
+  }
+}
+.success-tooltip {
+  .tooltip-inner {
+    background: $success !important;
+  }
+  .tooltip-arrow {
+    border-color: $success !important;
+  }
+}
+
 .tooltip {
   display: block !important;
   z-index: 10000;
