--- a/ui/src/theme/scss/styles.scss
+++ b/ui/src/theme/scss/styles.scss
@@ -8,12 +8,9 @@
 // Theme
 @import 'overrides/buttons';
 
-$theme-colors: map-merge(
-  $theme-colors,
-  (
-    'accent': $accent,
-  )
-);
+$theme-colors: map-merge($theme-colors,
+  ('accent': $accent,
+  ));
 
 // Optional
 @import '~bootstrap/scss/root';
@@ -56,6 +53,7 @@ $theme-colors: map-merge(
 }
 
 .btn-link-unstyled {
+
   &:hover,
   &:active {
     text-decoration: none !important;
@@ -67,6 +65,7 @@ $theme-colors: map-merge(
   color: $dark-gray;
   background-color: $white;
   border: 1px solid $medium-gray;
+
   &:disabled {
     background: $medium-gray;
     color: white;
@@ -86,6 +85,7 @@ $theme-colors: map-merge(
 .panel-vertical-container {
   display: flex;
   flex-direction: column;
+
   div.main-content {
     flex: 1;
     min-height: 75vh;
@@ -104,6 +104,7 @@ $theme-colors: map-merge(
     }
   }
 }
+
 @media screen and (min-height: 769px) {
   .panel-vertical-container {
     div.main-content {
@@ -121,6 +122,7 @@ $theme-colors: map-merge(
 .export-link {
   color: $accent;
   float: right;
+
   &:hover {
     text-decoration: none;
   }
@@ -128,6 +130,7 @@ $theme-colors: map-merge(
 
 .export-button {
   width: 40%;
+
   img {
     width: 100%;
   }
@@ -145,10 +148,15 @@ $theme-colors: map-merge(
     background-color: #0c62b2;
   }
 }
+
+.list-group-item {
+  padding: .30rem 1.25rem !important;
+}
+
 .table-blue {
   background: white !important;
   font-size: 1rem;
-  line-height: 24px;
+  line-height: 18px;
 }
 
 .table-blue td {
