tech:  Revue des widget de la home page

--- a/ui/src/theme/scss/_tooltip.scss
+++ b/ui/src/theme/scss/_tooltip.scss
@@ -15,6 +15,15 @@
   }
 }
 
+.warning-tooltip {
+  .tooltip-inner {
+    background: $warning !important;
+  }
+  .tooltip-arrow {
+    border-color: $warning !important;
+  }
+}
+
 .tooltip {
   display: block !important;
   z-index: 10000;
