--- a/ui/src/theme/scss/_variables.scss
+++ b/ui/src/theme/scss/_variables.scss
@@ -6,6 +6,7 @@ $success: #05d0a6;
 $white: #ffffff;
 $blue: #009dcc;
 $orange: #ea5b0f;
+$warning: #ffb900;
 $bouygues-cyan: #6cc3de;
 
 $light-gray: #f3f3f3;
