--- a/ui/src/theme/scss/styles.scss
+++ b/ui/src/theme/scss/styles.scss
@@ -14,6 +14,12 @@ $theme-colors: map-merge(
     'accent': $accent,
   )
 );
+$theme-colors: map-merge(
+  $theme-colors,
+  (
+    'white': $white,
+  )
+);
 
 // Optional
 @import '~bootstrap/scss/root';
@@ -180,4 +186,19 @@ $theme-colors: map-merge(
 
 .bottom-space {
   margin-bottom: 10rem;
+}
+
+.slide-up-reveal {
+  animation: slide-up 0.4s ease;
+}
+
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
